[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "har"
version = "0.1.0"
authors = [
  { name="yjk", email="mr.yjk@foxmail.com" },
]
description = "some tools for har"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/yjk114514/har"